Fixed reset button alignment as well as logout functionality

--- a/client/src/components/Search/Search.css
+++ b/client/src/components/Search/Search.css
@@ -8,6 +8,7 @@
   padding-top: 20px;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 .inputAndButton {
   display: flex;
